# ne-se-sardi

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: database.py  game_logic.py  main.py  models.py  schemas.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Dice.tsx  GameBoard.tsx  PlayerList.tsx
frontend/src/pages/: GamePage.tsx  HomePage.tsx  LobbyPage.tsx
frontend/src/types/: index.ts
tailscale/: serve.json
